--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,7 @@ env:
     - secure: dn0FPQ5IG4M/3kdwnyI78ElQ308Vc3QnKAvkWfwMFb8QxDqxQdnTo7AV1qTMtbLrDNkeEWIgi4nc7jmXNtvGTwOfhAULVh6606Qs5B+ezTdwzajbbFMI8SKQx/pnTojOMu8dx7V4lMoR/YWcojR0VC1IWVC62TGbSB1k5BDGgH0=
 script:
   - cd utilities
+  - pip install --upgrade pip
+  - echo $(which python)
+  - which python
   - pip install branch $TRAVIS_BRANCH
