--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,8 @@ before_install:
 env:
   global:
     - secure: dn0FPQ5IG4M/3kdwnyI78ElQ308Vc3QnKAvkWfwMFb8QxDqxQdnTo7AV1qTMtbLrDNkeEWIgi4nc7jmXNtvGTwOfhAULVh6606Qs5B+ezTdwzajbbFMI8SKQx/pnTojOMu8dx7V4lMoR/YWcojR0VC1IWVC62TGbSB1k5BDGgH0=
+before_script:
+  - pip install --upgrade pip
 script:
   - cd utilities
-  - pip install --upgrade pip
-  - echo $(which python)
-  - which python
-  - echo ${TRAVIS_BRANCH}
-  - echo ${TRAVIS_PULL_REQUEST_BRANCH}
   - python install.py branch ${TRAVIS_BRANCH}
