--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,6 @@ script:
   - echo ${TRAVIS_BRANCH}
   - python install.py branch ${TRAVIS_BRANCH}
   - cd ..
-  # - python -m pytest --cov=nwb_explorer
-  - coverage run --source pygeppetto -m pytest -v 
-  - coverage report -m
+  - python -m pytest --cov=nwb_explorer --cov-report term
 after_success:
   - codecov
